objects/SalesTeam__c.object
<CustomObject>
    <fields>
        <fullName>Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patch</label>
        <referenceTo>Patch__c</referenceTo>
        <relationshipLabel>Sales Teams</relationshipLabel>
        <relationshipName>Sales_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TempMembers__c</fullName>
        <label>TempMembers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Sales Team</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Sales Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>